Fix typo in previous patch: should use struct mallinfo2.

PR gold/26585
	* main.cc (main): Fix typo in previous patch.